syntax = "proto3";

package rustbase;

option optimize_for = SPEED;

service Rustbase {
    rpc Query(QueryMessage) returns (QueryResult) {}
}

message QueryMessage {
    string query = 1;
    string database = 2;
}

enum QueryResultType {
    OK = 0;
    NOT_FOUND = 1;
    ERROR = 2;
    SYNTAX_ERROR = 3;
}

message QueryResult {
    QueryResultType result_type = 1;   
    optional string message = 2;
    optional bytes bson = 3;
    optional string error_message = 4;
}